--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="description">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="description-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="content">
+      <p id="section-title">
         <label for="new-task">Add Item</label>
       </p>
-      <div class="task-row-wrapper">
+      <div class="add-tasks">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
