--- a/index.html
+++ b/index.html
@@ -5,49 +5,47 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="description">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="description-img">
       <a class="description-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="content">
-      <p id="section-title">
-        <label for="new-task">Add Item</label>
-      </p>
+      <h3 class="section-title">Add Item</h3>
       <div class="add-tasks">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <input id="new-task" class="input task" type="text">
+        <button class="button">Add</button>
       </div>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-title">Todo</h3>
+      <ul id="incomplete-tasks" class="section-body">
+        <li class="section-body-item">
+          <input class="input" type="checkbox">
+          <label class="task task-name">Pay Bills</label>
+          <input type="text" class="input task">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img src="./remove.svg" class="button-img">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="section-body-item edit-mode">
+          <input class="input" type="checkbox">
+          <label class="task task-name">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input task">
+          <button class="button edit">Save</button>
+          <button class="button delete">
+            <img src="./remove.svg" class="button-img">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-title">Completed</h3>
+      <ul id="completed-tasks" class="section-body">
+        <li class="section-body-item">
+          <input class="input" type="checkbox" checked>
+          <label class="task task-name">See the Doctor</label>
+          <input type="text" class="input task">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img src="./remove.svg" class="button-img">
           </button>
         </li>
       </ul>
