refactor(extended-1.2): add alternate content for images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="body">
     <main class="main">
       <section class="description">
-        <img src="./eisenhower-matrix.jpg" class="description-img">
+        <img src="./eisenhower-matrix.jpg" class="description-img" alt="Eisenhower matrix">
         <a class="description-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </section>
       <section class="content">
@@ -26,7 +26,7 @@
             <input type="text" class="input task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img src="./remove.svg" class="button-img">
+              <img src="./remove.svg" class="button-img" alt="Arrow with a cross">
             </button>
           </li>
           <li class="list-item edit-mode">
@@ -35,7 +35,7 @@
             <input type="text" value="Go Shopping" class="input task">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img src="./remove.svg" class="button-img">
+              <img src="./remove.svg" class="button-img" alt="Arrow with a cross">
             </button>
           </li>
         </ul>
@@ -47,7 +47,7 @@
             <input type="text" class="input task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img src="./remove.svg" class="button-img">
+              <img src="./remove.svg" class="button-img" alt="Arrow with a cross">
             </button>
           </li>
         </ul>
