change: change js to match html and css, to save application functionality

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <input class="input input_checkbox" type="checkbox">
             <label class="task task-name">Pay Bills</label>
             <input type="text" class="input task input_text">
-            <button class="button">Edit</button>
-            <button class="button">
+            <button class="button button-edit">Edit</button>
+            <button class="button button-delete">
               <img src="./remove.svg" class="button__img" alt="Arrow with a cross">
             </button>
           </li>
@@ -33,8 +33,8 @@
             <input class="input input_checkbox" type="checkbox">
             <label class="task task-name">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input task input_text">
-            <button class="button">Save</button>
-            <button class="button">
+            <button class="button button-edit">Save</button>
+            <button class="button button-delete">
               <img src="./remove.svg" class="button__img" alt="Arrow with a cross">
             </button>
           </li>
@@ -45,14 +45,14 @@
             <input class="input input_checkbox" type="checkbox" checked>
             <label class="task task-name">See the Doctor</label>
             <input type="text" class="input task input_text">
-            <button class="button">Edit</button>
-            <button class="button">
+            <button class="button button-edit">Edit</button>
+            <button class="button button-delete">
               <img src="./remove.svg" class="button__img" alt="Arrow with a cross">
             </button>
           </li>
         </ul>
       </section>
     </main>
-    <!-- <script src="app.js"></script> -->
+    <script src="app.js"></script>
   </body>
 </html>
